[package]
name = "fork-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version = "1",features = ["full"]}
tokio-stream="0.1"
futures="0.3"
mini-redis="0.4"
bytes="1"
rand="0.8"
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.86"
flate2 = "1.0.33"
